<resources tools:ignore="MissingTranslation" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
    <string name="applicationLabel">Contacts</string>
    <string name="launcherActivityLabel">Contacts</string>
    <string name="quickContactActivityLabel">View Contact</string>
    <string name="editContactActivityLabel">Edit Contact</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactInsertOrEditActivityTitle">Add to contact</string>
    <string name="contactPickerActivityTitle">Choose a contact</string>
    <string name="header_entry_contact_list_adapter_header_title">CREATE NEW CONTACT</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="description_action_menu_remove_star">Removed from favorites</string>
    <string name="description_action_menu_add_star">Added to favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_change_photo">Change photo</string>
    <string name="menu_create_contact_shortcut">Place on Home screen</string>
    <string name="menu_splitAggregate">Unlink</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_moveGroupMembers">Move group members</string>
    <string name="menu_new_contact_action_bar">Add Contact</string>
    <string name="menu_new_group_action_bar">Add Group</string>
    <string name="splitConfirmation">Unlink this contact into multiple contacts?</string>
    <string name="splitConfirmation_positive_button">Unlink</string>
    <string name="splitConfirmationWithPendingChanges">Would you like to save the changes you already made and unlink this contact into multiple contacts?</string>
    <string name="splitConfirmationWithPendingChanges_positive_button">Save and Unlink</string>
    <string name="joinConfirmation">Would you like to save the changes you already made and link with the contact selected?</string>
    <string name="joinConfirmation_positive_button">Save and Link</string>
    <string name="menu_joinAggregate">Link</string>
    <string name="menu_save">Save</string>
    <string name="titleJoinContactDataWith">Link contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to link with <xliff:g
        id="name">%s</xliff:g>:</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts linked</string>
    <plurals name="contacts_deleted_toast">
        <item quantity="one">Contact deleted</item>
        <item quantity="other">Contacts deleted</item>
    </plurals>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">Contacts from your read-only accounts cannot be deleted, but they can be hidden.</string>
    <string name="readOnlyContactWarning_positive_button">Hide</string>
    <string name="readOnlyContactDeleteConfirmation">The contact to be deleted has details from multiple accounts. Details from read-only accounts will be hidden, not deleted.</string>
    <string name="batch_link_single_contact_warning">You need at least two contacts selected to perform a link.</string>
    <string name="batch_link_confirmation">Link selected contacts?</string>
    <string name="batch_link_confirmation_positive_button">Link</string>
    <string name="single_delete_confirmation">Delete this contact?</string>
    <string name="batch_delete_confirmation">Delete selected contacts?</string>
    <string name="batch_delete_read_only_contact_confirmation">Contacts from your read-only accounts cannot be deleted, but they can be hidden.</string>
    <string name="batch_delete_multiple_accounts_confirmation">The contacts to be deleted have details from multiple accounts. Details from read-only accounts will be hidden, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete details from multiple accounts.</string>
    <string name="deleteConfirmation">Delete this contact?</string>
    <string name="deleteConfirmation_positive_button">Delete</string>
    <string name="menu_discard">Discard changes</string>
    <string name="invalidContactMessage">The contact doesn\'t exist.</string>
    <string name="createContactShortcutSuccessful_NoName">Contact added to Home screen.</string>
    <string name="createContactShortcutSuccessful"><xliff:g id="name">%s</xliff:g> added to Home screen.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="photoPickerNotFoundText" product="default">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts</string>
    <string name="noGroups">No groups.</string>
    <string name="noAccounts">To create groups you need an account.</string>
    <string name="emptyGroup">No people in this group.</string>
    <string name="addPeopleToGroup">To add some, edit the group.</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="contactUnlinkedToast">Contacts unlinked</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactSavedErrorToast">Couldn\'t save contact changes.</string>
    <string name="contactUnlinkErrorToast">Couldn\'t unlink contact.</string>
    <string name="contactJoinErrorToast">Couldn\'t link contact.</string>
    <string name="contactGenericErrorToast">Error saving contact.</string>
    <string name="contactPhotoSavedErrorToast">Couldn\'t save contact photo changes.</string>
    <string name="contactSavedToSimCardError">Error, Save to SIM card fail.</string>
    <string name="number_anr_too_long">Error, Number is too long.</string>
    <string name="email_address_too_long">Error, Email Address is too long.</string>
    <string name="sim_card_full">Error, Sim Card is full.</string>
    <string name="tag_too_long">Error, Contact name is too long.</string>
    <string name="invalid_phone_number">Error, Number is invalid.</string>
    <string name="no_phone_number_or_email">Please insert phone number or email address.</string>
    <string name="importConfirmation_title">Import contact?</string>
    <string name="groupSavedToast">Group saved.</string>
    <string name="groupSavedErrorToast">Couldn\'t save group changes.</string>
    <string name="listFoundAllContactsZero">No contacts</string>
    <string name="all_contacts_tab_label">All</string>
    <string name="favorites_tab_label">Favorites</string>
    <string name="contacts_groups_label">Groups</string>
    <string name="add_contact_dlg_message_fmt">Add \"<xliff:g id="email">%s</xliff:g>\" to contacts?</string>
    <string name="description_contact_photo">contact photo</string>
    <string name="quickcontact_transparent_view_description">Click to return to previous screen</string>
    <string name="quickcontact_add_phone_number">Add phone number</string>
    <string name="quickcontact_add_email">Add email</string>
    <string name="missing_app">No app was found to handle this action.</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_all">"Share all"</string>
    <string name="menu_add_contact">Add to contacts</string>
    <string name="share_via">Share contact via</string>
    <string name="dialog_new_group_account">Create group under account</string>
    <string name="title_move_members">Move members</string>
    <string name="message_move_members">Move members...</string>
    <string name="message_can_not_move_members">Can not move members</string>
    <string name="audio_chat">Voice chat</string>
    <string name="video_chat">Video chat</string>
    <string name="account_type_format"><xliff:g id="source" example="Gmail">%1$s</xliff:g> contact</string>
    <string name="google_account_type_format"><xliff:g id="source" example="Google">%1$s</xliff:g> account</string>
    <string name="from_account_format"><xliff:g id="source" example="user@gmail.com">%1$s</xliff:g></string>
    <string name="contact_read_only">Not editable from this app.</string>
    <string name="group_read_only">Not editable on this device.</string>
    <string name="take_photo">Take photo</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="pick_photo">Choose photo</string>
    <string name="pick_new_photo">Select new photo</string>
    <string name="upgrade_in_progress">Contact list is being updated.</string>
    <string name="search_results_searching">Searching\u2026</string>
    <string name="menu_select_all">"Select all"</string>
    <string name="menu_select_none">"Unselect all"</string>
    <string name="event_edit_field_hint_text">Date</string>
    <string name="group_edit_field_hint_text">Group name</string>
    <string name="change_photo">Change</string>
    <string name="primary_photo">Primary photo</string>
    <string name="edit_contact">Edit contact</string>
    <string name="aggregation_suggestion_join_dialog_message">Link
        the current contact with the selected contact?</string>
    <string name="aggregation_suggestion_edit_dialog_message">Switch to editing
        the selected contact? Information you entered so far will be copied.</string>
    <string name="contact_directory_description">Directory <xliff:g id="type" example="Corporate Directory">%1$s</xliff:g></string>
    <string name="activity_title_settings">Settings</string>
    <string name="menu_settings" msgid="377929915873428211">Settings</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="organization_company_and_title"><xliff:g id="company" example="Technical Program Manager">%2$s</xliff:g>, <xliff:g id="company" example="Google Inc.">%1$s</xliff:g></string>
    <string name="non_phone_caption">Phone number</string>
    <string name="non_phone_add_to_contacts">Add to contacts</string>
    <string name="activity_title_confirm_add_detail">Add to contact</string>
    <string name="non_phone_close">Close</string>
    <string name="date_year_toggle">Include year</string>
    <string name="contacts_unavailable_add_account">Add account</string>
    <string name="contacts_unavailable_import_contacts">Import contacts</string>
    <string name="create_group_dialog_title">Create new group</string>
    <string name="quickcontact_suggestion_link_button">LINK CONTACTS</string>
    <string name="quickcontact_suggestion_cancel_button">CANCEL</string>
    <string name="suggestion_card_this_contact_title">This contact</string>
    <string name="suggestion_card_duplicates_title">Possible duplicates</string>
    <string name="suggestion_card_help_message">These contacts might be the same person. You can link them together as a single contact.</string>
</resources>